--- a/src/stylesheets/_bundle.scss
+++ b/src/stylesheets/_bundle.scss
@@ -1,1 +1,6 @@
-@import "../templates/header/header";
+@import '../templates/0_header/header';
+@import '../templates/1_banner/banner';
+@import '../templates/2_credo-trade/credo-trade';
+@import '../templates/3_best/best';
+@import '../templates/4_footer/footer';
+@import '../templates/5_agreements/docs';
