--- a/src/stylesheets/_palette.scss
+++ b/src/stylesheets/_palette.scss
@@ -1,1 +1,6 @@
-$white: #ffffff;
+$white: #fff;
+$grey: #2a2426;
+$grey-font: #333;
+$light-grey-font: #838383;
+$red-start: #af0010;
+$red-end: #a51740;
