--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -2,5 +2,16 @@ $font-family-main: 'Open Sans', sans-serif;
 $font-size-prime: 18px;
 $font-size-option: 16px;
 $font-size-small: 14px;
-$font-size-header :63px;
-$font-size-header-small:32px;
+$font-size-smaller: 12px;
+$font-size-header: 63px;
+$font-size-header-md: 50px;
+$font-size-header-xs: 36px;
+$font-size-best: 52px;
+$font-size-best-span: 36px;
+$font-size-header-small: 32px;
+$font-size-header-small-md: 26px;
+$font-size-banner: 28px;
+$font-size-banner-md: 20px;
+$font-size-banner-md:20px;
+$font-size-button: 32px;
+$font-size-button-md: 20px;
